--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="col-5">
     <img src="img/icon.png" class="icono-form">
     <h1 class="registro-titulo">Bienvenido</h1>
-    <form class="registro-formulario" id="form-ingreso">
+    <form class="registro-formulario" id="form-ingreso" action="/ClaseProg/Modulo_Asignaturas.php">
       <div class="container-fluid">
         <select class="custom-select" form="form-ingreso">
             <option class="registro-opt-label" value="">Seleccionar...</option>
@@ -96,7 +96,7 @@
         <input type="text" class="registro-input" placeholder="User">
         <input type="password" class="registro-input" placeholder="Password">
         <input type="submit" value="Ingresar" class="registro-btn btn-group">
-        <input type="button" value="Solicitar cuenta" href=  "location='Solicitar_cuenta'" name= "boton" class="registro-btn btn-group">
+       
     </form>
     </div>
                            
