--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <style>
   /* Make the image fully responsive */
   .carousel-inner img {
+      background: black;
       width: 100%;
       height: 100%;
       margin: auto;
