--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</nav>
 		</div>
 	</div>
-  <p>mancipe se la come xddd</p>
+  <p>salcedo es gay xddd</p>
 
 <div class="container-fluid">
 	<div class="row">
