--- a/crear_actividad.html
+++ b/crear_actividad.html
@@ -37,6 +37,9 @@
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs">
       <li class="nav-item">
+        <a class="nav-link" href="Modulo_Asignaturas.php">Asignaturas</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link active" href="#">Subir Actividad</a>
       </li>
       <li class="nav-item">
