--- a/registro_asistencia.html
+++ b/registro_asistencia.html
@@ -36,6 +36,9 @@
 <div class="card">
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs">
+			<li class="nav-item">
+				<a class="nav-link" href="Modulo_Asignaturas.php">Asignaturas</a>
+			</li>
       <li class="nav-item">
         <a class="nav-link" href="crear_actividad.html">Subir Actividad</a>
       </li>
@@ -51,6 +54,12 @@
     </ul>
   </div>
   <div class="card-body">
+	
+	</div>
+	
+
+</div>
+</div>
 
 
 </body>
