--- a/modulo_actividadest.html
+++ b/modulo_actividadest.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="bootstrap/js/jquery.min.js" type="text/javascript"></script>
 	<script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-	<title>Subir Actividad</title>
+	<title>Vista actividad</title>
 </head>
 <body>
 	<div class="container mt-2 mb-2">
@@ -37,22 +37,10 @@
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs">
       <li class="nav-item">
-        <a class="nav-link" href="Modulo_Asignaturas.php">Asignaturas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Subir Actividad</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="actividades_evaluativas.html">Actividades evaluativas</a>
-      </li>
- 	  <li class="nav-item">
-        <a class="nav-link" href="registro_notas.html">Registro de notas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="registro_asistencia.html">Registro de asistencia</a>
+        <a class="nav-link" href="Modulo_Asignaturasest.php">Asignaturas</a>
       </li>
     </ul>
-  </div>
+</div>
   <div class="card-body">
    
 <!-- formulario de subir actividad -->    
