--- a/modulo_actividadest.html
+++ b/modulo_actividadest.html
@@ -37,10 +37,16 @@
   <div class="card-header">
     <ul class="nav nav-tabs card-header-tabs">
       <li class="nav-item">
-        <a class="nav-link" href="Modulo_Asignaturasest.php">Asignaturas</a>
-      </li>
+        <a class="nav-link" href="Modulo_Asignaturasest.php">Actividades</a>
+			</li>
+			<li class="nav-item">
+        <a class="nav-link" href="modulo_notasest.html">Ver Notas</a>
+			</li>
+			<li class="nav-item">
+        <a class="nav-link" href="modulo_asistenciaest.html">Ver Asistencia</a>
+			</li>
     </ul>
-</div>
+  </div>
   <div class="card-body">
    
 <!-- formulario de subir actividad -->    
