update module haceracvitida and notas

--- a/modulo_notasest.html
+++ b/modulo_notasest.html
@@ -36,11 +36,51 @@
     <div class="card">
           <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
-              <div align='center'><h5 style="color:#007bff";> Actividad a realizar</h5>
+              <div align='center'><h5 style="color:#007bff";> Notas</h5>
             </ul>
               </div>
+<div class="container-fluid">
 
-
+	<div class="form-group col-md-3">
+		<br>
+		<label for="periodo">Periodo a consultar</label>
+    <select class="form-control" id="periodo">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+    </select>
+  </div>
+</div>
+							<div class="container">
+								<h2>Table Head Colors</h2>
+								<p>The .thead-dark class adds a black background to table headers, and the .thead-light class adds a grey background to table headers:</p>
+								<table class="table">
+									<thead class="thead-dark">
+										<tr>
+											<th>Firstname</th>
+											<th>Lastname</th>
+											<th>Email</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>John</td>
+											<td>Doe</td>
+											<td>john@example.com</td>
+										</tr>
+										<tr>
+											<td>Mary</td>
+											<td>Moe</td>
+											<td>mary@example.com</td>
+										</tr>
+										<tr>
+											<td>July</td>
+											<td>Dooley</td>
+											<td>july@example.com</td>
+										</tr>
+									</tbody>
+								</table>
 
 </body>
 </html>
