--- a/modulo_notasest.html
+++ b/modulo_notasest.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="bootstrap/js/jquery.min.js" type="text/javascript"></script>
 	<script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-	<title>Subir Actividad</title>
+	<title>Notas</title>
 </head>
 <body>
 	<div class="container mt-2 mb-2">
@@ -53,34 +53,38 @@
   </div>
 </div>
 							<div class="container">
-								<h2>Table Head Colors</h2>
-								<p>The .thead-dark class adds a black background to table headers, and the .thead-light class adds a grey background to table headers:</p>
+							
+								<p>Notas del Periodo </p>
 								<table class="table">
 									<thead class="thead-dark">
 										<tr>
-											<th>Firstname</th>
-											<th>Lastname</th>
-											<th>Email</th>
+											<th>Fecha</th>
+											<th>Actividad a la Que Corresponde</th>
+											<th>Notas del Periodo #</th>
 										</tr>
 									</thead>
 									<tbody>
-										<tr>
-											<td>John</td>
-											<td>Doe</td>
-											<td>john@example.com</td>
+										<tr class="table-danger">
+											<td>15-04-1997</td>
+											<td>taller</td>
+											<td>2.9</td>
 										</tr>
 										<tr>
-											<td>Mary</td>
-											<td>Moe</td>
-											<td>mary@example.com</td>
+											<td>05-04-2015</td>
+											<td>Parcial</td>
+											<td>6.0</td>
 										</tr>
 										<tr>
-											<td>July</td>
-											<td>Dooley</td>
-											<td>july@example.com</td>
+											<td>05-04-2015</td>
+											<td>Parcial</td>
+											<td>7.0</td>
 										</tr>
 									</tbody>
 								</table>
 
+								<div class="container">
+										 <button class="btn btn-outline-primary"><a href="javascript:history.go(-1);">Atras</a>
+										 </button>
+								</div>
 </body>
 </html>
