--- a/modulo_notasest.html
+++ b/modulo_notasest.html
@@ -13,7 +13,7 @@
 		<div class="page-header">
 			<nav class="navbar sticky-top navbar-expand-sm bg-light navbar-dark">
 				<div class="container-fluid">
-						<a class="navbar-brand" href="">
+						<a class="navbar-brand" href="index.html">
               <img src="img/user.png" style="width: 100px;">
             </a>
 					    <ul class="navbar-nav">
@@ -74,7 +74,7 @@
 											<td>Parcial</td>
 											<td>6.0</td>
 										</tr>
-										<tr>
+										<tr class="table-success">
 											<td>05-04-2015</td>
 											<td>Parcial</td>
 											<td>7.0</td>
