--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<?php echo readfile("header.php"); ?>
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -18,8 +17,8 @@
   </style>
 </head>
 <body>
-
-      <object type="text/html" data="header.php" width="100%" height="100%"></object>
+<!-- codigo para importar header -->
+    <object type="text/html" data="header.php" width="100%" height="100%"></object>
 
 <div class="container-fluid">
 	<div class="row">
@@ -64,16 +63,6 @@
     <img src="img/icon.png" class="icono-form">
     <h1 class="registro-titulo">Bienvenido</h1>
     <form class="registro-formulario" id="form-ingreso" action="/ClaseProg/Modulo_Asignaturas.php">
-      <div class="container-fluid">
-        <select class="custom-select" form="form-ingreso">
-            <option class="registro-opt-label" value="">Seleccionar...</option>
-            <option value="1">Administrador</option>
-            <option value="2">Docente</option>
-            <option value="3">Estudiante</option>
-            <option value="4">Acudiente</option>
-            <option value="5">Superadmin</option>
-          </select>
-        </div>
         <input type="text" class="registro-input" placeholder="User">
         <input type="password" class="registro-input" placeholder="Password">
         <input type="submit" value="Ingresar" class="registro-btn btn-group">
